<resources>
    <string name="application_name">MOMENTO</string>
    <string name="app_name">Momento</string>
    <string name="slogan">Memento, anlarınızı arkadaşlarınızla paylaşmanıza izin veren sosyal bir uygulamadır</string>
    <string name="sign_in_explanation">Momento için oluşturduğunuz e-posta kimliğinizi ve şifrenizi girerek devam edebilirsiniz.</string>
    <string name="reset_password_explanation">Sorun Değil! Sadece Email adresini girerek, sana yollayacağımız bağlantıdan şifreni sıfırlayabilirsin.</string>
    <string name="create_new_password_explanation">Güçlü bir parola için harf, sayı ve $,!, vb. gibi özel karakterleri kullanabilirsiniz.</string>
    <string name="create_account_explanation">Gerekli bilgileri doldurarak devam edebilirsiniz. * ile işaretli alanların doldurulması zorunludur</string>
    <string name="set_up_profile_explanation">Hey! Momento da paylaşmaya başlamadan önce sizden birkaç ayrıntıya ihtiyacımız var</string>
    <string name="go_to_momento">Giriş Yap</string>
    <string name="hint_email_id">E-Mail</string>
    <string name="hint_password">Şifre</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="create_new_account">Yeni Hesap Oluştur</string>
    <string name="sign_in_title">Giriş Yap</string>
    <string name="sign_in_page_reset_password">Giriş Yapamıyor musunuz ? \n Şifrenizi Sıfırlayın</string>
    <string name="reset_password_title">Şifre Sıfırla</string>
    <string name="reset_password_send_link">Gönder</string>
    <string name="create_new_password_title">Yeni Şifre Oluştur</string>
    <string name="hint_new_password">Yeni Şifre</string>
    <string name="hint_confirm_new_password">Yeni Şifre Tekrar</string>
    <string name="hint_confirm_password">Şifre Tekrar</string>
    <string name="save">Kaydet</string>
    <string name="create_account_title">Hesap Oluştur</string>
    <string name="proceed">Devam</string>
    <string name="comments">Yorumlar</string>
    <string name="add_comment">Yorum ekle...</string>
    <string name="save_photo">Fotoğrafı Kaydet</string>
    <string name="hide_posts">Gönderilerini Gizle</string>
    <string name="user_report">Şikayet Et</string>
    <string name="follower">Takipçi</string>
    <string name="following">Takip</string>
    <string name="about">Hakkında</string>
    <string name="edit_profile">Profili Düzenle</string>
    <string name="firstname_lastname">Ad Soyad</string>
    <string name="birthday_date">Doğum Tarihi</string>
    <string name="gender">Cinsiyet</string>
    <string name="start_now">Şimdi Başla</string>
    <string name="set_profile">Profili Ayarla</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="my_profile">Profilim</string>
    <string name="chat">Sohbet</string>
    <string name="notifications">Bildirimler</string>
    <string name="photo_saved">Kaydedilenler</string>
    <string name="momento_info">Momento Hakkında</string>
    <string name="settings">Ayarlar</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="home_button">Anasayfa</string>
    <string name="search">Arama</string>
    <string name="new_post">Yeni Gönderi</string>
</resources>
