<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignInActivity"
    android:background="@color/colorWhite">


    <TextView
        android:id="@+id/sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_title"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="@color/page_title"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/sign_in_title"
        android:layout_marginTop="60dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_explanation"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/hint_email_id"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            android:paddingStart="10dp"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/background_edittext_border"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_password"
            android:textSize="12sp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:paddingStart="10dp"
            android:textColorHint="@color/hint_color"
            android:background="@drawable/background_edittext_border"/>
        
        <Button
            android:id="@+id/signInHome"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/background_gradient_button"
            android:textColor="@color/colorWhite"
            android:text="@string/go_to_momento"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/sign_in_page_reset_password"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/link_button"
            android:textAlignment="center"/>

    </LinearLayout>

</RelativeLayout>