<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/sign_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/edit_profile"
            android:textColor="@color/page_title"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sign_in_title"
            android:layout_marginTop="60dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/set_up_profile_explanation"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_full_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/background_edittext_border"
                android:hint="@string/firstname_lastname"
                android:paddingStart="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/edit_birtday"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/background_edittext_border"
                android:hint="@string/birthday_date"
                android:paddingStart="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_gender"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/background_edittext_border"
                android:hint="Cinsiyet"
                android:paddingStart="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_about"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/background_edittext_border"
                android:hint="@string/about"
                android:paddingStart="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="12sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/background_gradient_button"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </RelativeLayout>
</layout>