<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".Activity.MainActivity">

        <TextView
            android:id="@+id/sign_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/create_account_title"
            android:textColor="@color/page_title"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/create_account_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/sign_in_title"
            android:layout_marginTop="40dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/create_account_explanation"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/create_account_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/background_edittext_border"
                android:hint="@string/hint_email_id"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/create_account_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/background_edittext_border"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/create_account_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/background_edittext_border"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColorHint="@color/hint_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:text="Hesap oluşturarak, Momento ile ilgili Tüm şart Koşulları otomatik olarak kabul ediyorsunuz." />

            <Button
                android:id="@+id/next_page"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/background_gradient_button"
                android:text="@string/proceed"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </RelativeLayout>
</layout>