<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.ResetPasswordActivity"
        android:background="@color/colorWhite">


        <TextView
            android:id="@+id/sign_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_title"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textColor="@color/page_title"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/sign_in_title"
            android:layout_marginTop="100dp"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password_explanation"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/reset_password_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:hint="@string/hint_email_id"
                android:textSize="12sp"
                android:paddingLeft="10dp"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/background_edittext_border"/>

            <Button
                android:id="@+id/reset_password_send_link_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_gradient_button"
                android:textColor="@color/colorWhite"
                android:text="@string/reset_password_send_link"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

    </RelativeLayout>
</layout>