<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_app"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/application_name"
        android:textColor="@color/application_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_below="@id/logo_application"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_below="@+id/app_name"/>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/slogan_name"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/create_new_account_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textSize="14sp"
        android:textColor="@color/link_button"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signin_button"
        android:focusable="true"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="© 2019 Momento Inc."
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>


</RelativeLayout>