<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/menu_button"
                android:layout_width="20dp"
                android:layout_height="16dp"
                android:layout_alignTop="@+id/app_name"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:background="@mipmap/icon_menu" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:text="@string/comments"
                android:textColor="@color/page_title"
                android:textSize="16sp" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignTop="@+id/menu_button"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:background="@mipmap/icon_options_exit" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tab_layout"
            android:background="#BFFFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_comment_options_border"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icon_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@mipmap/icon_share" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_photo_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@mipmap/icon_photo_save" />


                    <TextView
                        android:id="@+id/save_photo_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/save_photo"
                        android:textColor="@color/mainTextColor" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_user_post_hide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@mipmap/icon_user_post_hide" />


                    <TextView
                        android:id="@+id/hide_posts_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/hide_posts"
                        android:textColor="@color/mainTextColor" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_user_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@mipmap/icon_user_report" />


                    <TextView
                        android:id="@+id/user_report_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/user_report"
                        android:textColor="@color/mainTextColor" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
</layout>